# ComputeGraph

./: .coverage  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  buildyml
compgraph/: __init__.py  algorithms.py  graph.py
compgraph/compgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
compgraph/operations/: __init__.py  base.py  external_sort.py  join.py  map.py  reduce.py
examples/: run_inverted_index.py  run_pmi.py  run_word_count.py  run_yandex_maps.py
shad_env/: pyvenv.cfg
tests/: test_examples.py  test_graph.py  test_operations.py
tests/correctness/: test_algorithms.py  test_cli.py  test_operations.py
tests/memory/: memory_watchdog.py  test_algorithms.py  test_operations.py
