[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compgraph"
version = "0.0.1"
authors = [
  { name="mektus", email="mtarasyan@mail.ru" },
]
description = "Computation graphs"
readme = "LIB_README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://gitlab.manytask.org/python/students-fall-2022/mektus.git"

[project.optional-dependencies]
install_requires = [
"click >= 8.1.3"
]

[tool.setuptools.packages.find]
where = ["compgraph"]
include = ["pkg*"]
